# hash-comparison

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: aggregate-results.yml
bench_hash/: Cargo.toml  README.md  RESULTS.md
bench_hash/benches/: hash_comparison.rs
bench_hash/src/: lib.rs
bench_map/: Cargo.toml
bench_map/benches/: map_comparison.rs
bench_prng/: Cargo.toml  README.md  RESULTS.md
bench_prng/benches/: rng_comparison.rs
benches/: hash_comparison.rs  rng_comparison.rs
results/amd-ryzen-9-9950x-16-core-processor/: README.md  environment.ini
results/apple-m1/: README.md  environment.ini
results/apple-m4/: README.md  environment.ini
xtask/: Cargo.toml
xtask/src/: bench.rs  cli.rs  collect.rs  environment.rs  main.rs  results.rs  scope.rs  util.rs
