[package]
name = "bench_hash"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bench]]
harness = false
name = "hash_comparison"

[dependencies]
blake2 = { workspace = true }
blake3 = { workspace = true }
digest = { workspace = true }
gxhash = { workspace = true }
rand = { workspace = true }
rapidhash = { workspace = true }
sha2 = { workspace = true, features = ["asm"] }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
criterion = { workspace = true }
