[package]
name = "bench_prng"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bench]]
harness = false
name = "rng_comparison"

[dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
